--- a/Twitter API-Copy3.ipynb
+++ b/Twitter API-Copy3.ipynb
@@ -23,10 +23,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "access_token=\"1343598281276846083-K80RM0P4DVYhzv6G7Cvb8jIFWS7CX7\"\n",
-    "access_token_secret=\"iZRzu19pMa5vdeE3uWhjv4euREDrCkhssEAzGYxBCU3QA\"\n",
-    "consumer_key=\"aRfFwc9apt33YNOC60jCcRjw5\"\n",
-    "consumer_secret= \"hpXSvFv1gsOdm8XN5dkpz3cRHdZ5aNeJ3xmJjKYMJn0E8MmmEU\""
+    "access_token=\"\"\n",
+    "access_token_secret=\"\"\n",
+    "consumer_key=\"\"\n",
+    "consumer_secret= \"\""
    ]
   },
   {
